# ising

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
m4/: ax_get_enable.m4
src/: config.hpp.in  ising.cpp
